# artifacts/api-server/src/routes/index.ts
@@ -8,6 +8,7 @@ import scoresRouter from "./scores";
 import reportsRouter from "./reports";
 import usersRouter from "./users";
 import dashboardRouter from "./dashboard";
+import batteriesRouter from "./batteries";
 
 const router: IRouter = Router();
 
@@ -20,5 +21,6 @@ router.use(externalRouter);
 router.use(scoresRouter);
 router.use(reportsRouter);
 router.use(dashboardRouter);
+router.use(batteriesRouter);
 
 export default router;
